@@ -129,6 +129,8 @@
           SQL filters, order by and limit clauses
         pfcmd report and grammar issues
           (http://packetfence.org/mantis/view.php?id=506)
+        ui dashboard grammar is not precise
+          (http://packetfence.org/mantis/view.php?id=507)
 
 1.7.5
         pfsetvlan should check that MAC field is filled before
